# scotty

./: scotty.cabal
.github/workflows/: haskell-ci.yml
Web/: Scotty.hs
Web/Scotty/: Impl.hs  Trans.hs
Web/Scotty/Internal/: Types.hs
freezes/: 2022-11-17-ghc943-cabal-project.freeze
