Name:                scotty
Version:             1.0
Synopsis:            Haskell web framework inspired by Ruby's Sinatra, using WAI and Warp
Homepage:            https://github.com/scotty-web/scotty
Bug-reports:         https://github.com/scotty-web/scotty/issues
License:             BSD3
License-file:        LICENSE
Author:              Andrew Farmer <xichekolas@gmail.com>
Maintainer:          Andrew Farmer <xichekolas@gmail.com>
Copyright:           (c) 2012-Present Andrew Farmer
Category:            Web
Stability:           experimental
Build-type:          Simple
Cabal-version:       >= 1.10
Description:
  A Haskell web framework inspired by Ruby's Sinatra, using WAI and Warp.
  .
  @
    &#123;-&#35; LANGUAGE OverloadedStrings &#35;-&#125;
    .
    import Web.Scotty
    .
    import Data.Monoid (mconcat)
    .
    main = scotty 3000 $
    &#32;&#32;get &#34;/:word&#34; $ do
    &#32;&#32;&#32;&#32;beam <- param &#34;word&#34;
    &#32;&#32;&#32;&#32;html $ mconcat [&#34;&#60;h1&#62;Scotty, &#34;, beam, &#34; me up!&#60;/h1&#62;&#34;]
  @
  .
  .
  Scotty is the cheap and cheerful way to write RESTful, declarative web applications.
  .
    * A page is as simple as defining the verb, url pattern, and Text content.
  .
    * It is template-language agnostic. Anything that returns a Text value will do.
  .
    * Conforms to WAI Application interface.
  .
    * Uses very fast Warp webserver by default.
  .
  As for the name: Sinatra + Warp = Scotty.
  .
  [WAI] <http://hackage.haskell.org/package/wai>
  .
  [Warp] <http://hackage.haskell.org/package/warp>
tested-with:         GHC == 7.6.3
                   , GHC == 7.8.4
                   , GHC == 7.10.3
                   , GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.4
                   , GHC == 9.0.1
Extra-source-files:
    README.md
    changelog.md
    examples/404.html
    examples/LICENSE
    examples/*.hs
    examples/static/jquery.js
    examples/static/jquery-json.js
    examples/uploads/.keep

Library
  Exposed-modules:     Web.Scotty
                       Web.Scotty.Trans
                       Web.Scotty.Internal.Types
  other-modules:       Web.Scotty.Impl
  default-language:    Haskell2010
  build-depends:       base
                       , aeson
                       , base-compat-batteries
                       , blaze-builder
                       , bytestring
                       , case-insensitive
                       , data-default-class
                       , exceptions
                       , http-types
                       , monad-control
                       , mtl
                       , network
                       , regex-compat
                       , text
                       , transformers
                       , transformers-base
                       , transformers-compat
                       , wai
                       , wai-extra
                       , warp

  if impl(ghc < 8.0)
    build-depends:     fail

  if impl(ghc < 7.10)
    build-depends:     nats                  >= 0.1      && < 2

  GHC-options: -Wall -fno-warn-orphans

test-suite spec
  main-is:             Spec.hs
  other-modules:       Web.ScottySpec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  build-depends:       async,
                       base,
                       bytestring,
                       data-default-class,
                       directory,
                       hspec == 2.*,
                       hspec-wai >= 0.6.3,
                       http-types,
                       lifted-base,
                       network,
                       scotty,
                       text,
                       wai
  build-tool-depends:  hspec-discover:hspec-discover == 2.*
  GHC-options:         -Wall -threaded -fno-warn-orphans

benchmark weigh
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  build-depends:       base,
                       scotty,
                       lucid,
                       bytestring,
                       mtl,
                       text,
                       transformers,
                       data-default-class,
                       weigh == 0.0.16
  GHC-options:         -Wall -O2 -threaded

source-repository head
  type:     git
  location: git://github.com/scotty-web/scotty.git
